--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -8,6 +8,12 @@
   vars_files:
     - vars/main.yml
 
+  handlers:
+    - name: restart_datadog_agent
+      service:
+        name: datadog-agent
+        state: restarted
+
   pre_tasks:
     - name: Update Apt Cache
       apt: update_cache=yes cache_valid_time=86400
@@ -48,3 +54,14 @@
   roles:
     - yatesr.timezone
     - Datadog.datadog
+
+  post_tasks:
+    - name: Setup Prometheus Scraper Config for Datadog
+      template: 
+        src: prometheus_conf.yaml.j2
+        dest: /etc/datadog-agent/conf.d/prometheus.d/conf.yaml
+        owner: root
+        group: root
+        mode: 0644
+      notify:
+        - restart_datadog_agent
