--- a/ansible/vars/main.yml.example
+++ b/ansible/vars/main.yml.example
@@ -1,3 +1,4 @@
 ---
 timezone: UTC
 datadog_api_key: <MY_DATADOG_API_KEY>
+redis_enterprise_prometheus_endpoint: http://mycluster.example.com:8070/metrics
